--- a/11. Circular Menu/index.html
+++ b/11. Circular Menu/index.html
@@ -1,4 +1,3 @@
-/* From Uiverse.io by kennyotsu-monochromia */ 
 <div class="wrapper">
   <input type="checkbox" id="toogle" class="hidden-trigger">
   <label for="toogle" class="circle">
@@ -42,3 +41,4 @@
     </button>
    </div>
 </div>
+<link rel="stylesheet" href="style.css">
