--- a/9. Loader Animation CSS/index.html
+++ b/9. Loader Animation CSS/index.html
@@ -3,3 +3,4 @@
     <div class="three-body__dot"></div>
     <div class="three-body__dot"></div>
     </div>
+    <link rel="stylesheet" href="style.css">
