--- a/15. Loader card Animation/index.html
+++ b/15. Loader card Animation/index.html
@@ -6,3 +6,4 @@
   </div>
   <div class="absolute bottom-5 right-0 h-4 w-4 rounded-full bg-slate-400"></div>
 </div>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
